Themed website around spooktober

--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
         <link href="https://fonts.googleapis.com/css?family=K2D" rel="stylesheet">
         <link href="styles/style.css" rel="stylesheet" type="text/css">
         <meta charset="utf-8">
-        <title>My test page</title>
+        <title>Calvin Golas</title>
     </head>
     <body>
-        <h1>My test website</h1>
+        <h1>Welcome to Spooktober!!!</h1>
         <img src="images/spooky.png" alt="A generic cyberpunk image">
         <p>
             Overconfidence is a slow and insidious killer. Back in the days of the living, 
             humans created cyberpunk to more accurately represent the intricacies of baking 
             fresh apple pies (<a href="https://www.youtube.com/watch?v=u4Yi5yPyGUU">I mean, wouldn't you?!</a>).
         </p>
-        <p>Let's try out lists now...</p>
+        <p>Cool stuff!</p>
         <ul>
-            <li>One</li>
-            <li>Two</li>
-            <li>Three</li>
+            <li><a href="https://www.amazon.com/s/ref=nb_sb_noss_1?url=search-alias%3Daps&field-keywords=halloween+decorations">Halloween decorations!</a></li>
+            <li><a href="https://duckduckgo.com/?q=pumpkins&t=ffab&atb=v138-3__&iax=images&ia=images">Pumpkin images!</a></li>
+            <li><a href="https://www.youtube.com/watch?v=XTgFtxHhCQ0">Don't get too spooked!</a></li>
         </ul>
-        <p>Looks like that worked!</p>
+        <p>Ain't that a kick in the head!</p>
         <button>Change user</button>
         <script src="scripts/main.js"></script>
     </body>
