added secret santa list

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
             humans created cyberpunk to more accurately represent the intricacies of baking 
             fresh apple pies (<a href="https://www.youtube.com/watch?v=u4Yi5yPyGUU">I mean, wouldn't you?!</a>).
         </p>
-        <p>Cool stuff!</p>
+        <p>Secret Santa list so far for those curious!</p>
         <ul>
-            <li><a href="https://www.amazon.com/s/ref=nb_sb_noss_1?url=search-alias%3Daps&field-keywords=halloween+decorations">Halloween decorations!</a></li>
-            <li><a href="https://duckduckgo.com/?q=pumpkins&t=ffab&atb=v138-3__&iax=images&ia=images">Pumpkin images!</a></li>
-            <li><a href="https://www.youtube.com/watch?v=XTgFtxHhCQ0">Don't get too spooked!</a></li>
+            <li>Me!</li>
+            <li>Julianna</li>
+            <li>Blaine</li>
+            <li>Evan</li>
+            <li>Me!</li>
         </ul>
         <p>Ain't that a kick in the head!</p>
         <button>Change user</button>
