updated secret santa list

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li>Julianna</li>
             <li>Blaine</li>
             <li>Evan</li>
-            <li>Me!</li>
+            <li>Rebecca</li>
         </ul>
         <p>Ain't that a kick in the head!</p>
         <button>Change user</button>
