Updated Secret Santa list

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <li>Blaine</li>
             <li>Evan</li>
             <li>Rebecca</li>
+            <li>Ben</li>
+            <li>Emily</li>
+            <li>Andrew</li>
+            <li>Terry</li>
         </ul>
         <p>Ain't that a kick in the head!</p>
         <button>Change user</button>
