--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li>Emily</li>
             <li>Andrew</li>
             <li>Terry</li>
+            <li>Isaac</li>
         </ul>
         <p>Ain't that a kick in the head!</p>
         <button>Change user</button>
