--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li>Andrew</li>
             <li>Terry</li>
             <li>Isaac</li>
+            <li>Joel</li>
         </ul>
         <p>Ain't that a kick in the head!</p>
         <button>Change user</button>
