Updated secret santa list!

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li>Terry</li>
             <li>Isaac</li>
             <li>Joel</li>
+            <li>Gabe</li>
         </ul>
         <p>Ain't that a kick in the head!</p>
         <button>Change user</button>
