--- a/index.html
+++ b/index.html
@@ -14,21 +14,17 @@
             humans created cyberpunk to more accurately represent the intricacies of baking 
             fresh apple pies (<a href="https://www.youtube.com/watch?v=u4Yi5yPyGUU">I mean, wouldn't you?!</a>).
         </p>
-        <p>Secret Santa list so far for those curious!</p>
-        <ul>
-            <li>Me!</li>
-            <li>Julianna</li>
-            <li>Blaine</li>
-            <li>Evan</li>
-            <li>Rebecca</li>
-            <li>Ben</li>
-            <li>Emily</li>
-            <li>Andrew</li>
-            <li>Terry</li>
-            <li>Isaac</li>
-            <li>Joel</li>
-            <li>Gabe</li>
-        </ul>
+        <p>
+        [Easy] Print a new number by adding one to each of its digit
+        Description:
+        A number is input in computer then a new no should get printed by adding one to each of its digit. If you encounter a 9, insert a 10 (don't carry over, just shift things around).
+
+        For example, 998 becomes 10109.
+        Bonus
+
+        This challenge is trivial to do if you map it to a string to iterate over the input, operate, and then cast it back. Instead, try doing it without casting it as a string at any point, keep it numeric (int, float if you need it) only.
+        </p>
+        
         <p>Ain't that a kick in the head!</p>
         <button>Change user</button>
         <script src="scripts/main.js"></script>
