Changed website theme to cats!

--- a/index.html
+++ b/index.html
@@ -4,28 +4,26 @@
         <link href="https://fonts.googleapis.com/css?family=K2D" rel="stylesheet">
         <link href="styles/style.css" rel="stylesheet" type="text/css">
         <meta charset="utf-8">
-        <title>Calvin Golas</title>
+        <title>Catacular</title>
     </head>
     <body>
-        <h1>Welcome to Spooktober!!!</h1>
-        <img src="images/spooky.png" alt="A generic cyberpunk image">
+        <h1>Welcome to Catacular!!!</h1>
+        <img src="images/spooky.png" alt="A picture of a cat!">
         <p>
-            Overconfidence is a slow and insidious killer. Back in the days of the living, 
-            humans created cyberpunk to more accurately represent the intricacies of baking 
-            fresh apple pies (<a href="https://www.youtube.com/watch?v=u4Yi5yPyGUU">I mean, wouldn't you?!</a>).
+            Welcome to my website: a resource on cat adoption and Salt Lake City cat-related community links!
         </p>
         <p>
-        [Easy] Print a new number by adding one to each of its digit
-        Description:
-        A number is input in computer then a new no should get printed by adding one to each of its digit. If you encounter a 9, insert a 10 (don't carry over, just shift things around).
-
-        For example, 998 becomes 10109.
-        Bonus
-
-        This challenge is trivial to do if you map it to a string to iterate over the input, operate, and then cast it back. Instead, try doing it without casting it as a string at any point, keep it numeric (int, float if you need it) only.
+        <ul>
+            <li><a href="https://www.tinkerscatcafe.com">Tinkers's Cat Cafe!</a></li>
+            <li><a href="http://www.kittenlady.org">Kitten Lady:</a></li> A kitten advocacy resource.
+            <li><a href="http://contentcareer.com/blog/the-top-cat-instagram-accounts-of-2019/">Popular Instagram cats!</a></li>
+            <li><a href="https://www.catsthemusical.com">Cats: The Musical</a></li>
+            <li><a href="https://www.youtube.com/watch?v=yEYRoXWmWYU">My favorite cat song!</a></li>
+            <li><a href="https://bestfriends.org">Best Friends:</a></li> A local no-kill shelter!
+        </ul>
         </p>
         
-        <p>Ain't that a kick in the head!</p>
+        <p>Thank you for visiting!</p>
         <button>Change user</button>
         <script src="scripts/main.js"></script>
     </body>
