site redesign to portfolio format

--- a/index.html
+++ b/index.html
@@ -4,22 +4,78 @@
         <link href="https://fonts.googleapis.com/css?family=K2D" rel="stylesheet">
         <link href="styles/style.css" rel="stylesheet" type="text/css">
         <meta charset="utf-8">
-        <title>Catacular</title>
+        <title>Portfolio</title>
     </head>
     <body>
-        <h1>Welcome to Catacular!!!</h1>
-        <img src="images/spooky.png" alt="A picture of a cat!">
+        <h1>Welcome to my portfolio!!!</h1>
+        <img src="images/me.png" alt="A picture of me, Calvin Golas!">
         <p>
-            Welcome to my website: a resource on cat adoption and Salt Lake City cat-related community links!
+            Welcome to my portfolio: a showcase of some cool projects I've worked on!
         </p>
+        <p><a href="documents/MyResume.pdf" download="GolasCalvinResume">Download my resume here</a></p>
         <p>
         <ul>
-            <li><a href="https://www.tinkerscatcafe.com">Tinkers's Cat Cafe!</a></li>
-            <li><a href="http://www.kittenlady.org">Kitten Lady:</a></li> A kitten advocacy resource.
-            <li><a href="http://contentcareer.com/blog/the-top-cat-instagram-accounts-of-2019/">Popular Instagram cats!</a></li>
-            <li><a href="https://www.catsthemusical.com">Cats: The Musical</a></li>
-            <li><a href="https://www.youtube.com/watch?v=yEYRoXWmWYU">My favorite cat song!</a></li>
-            <li><a href="https://bestfriends.org">Best Friends:</a></li> A local no-kill shelter!
+            <li><a href="https://github.com/dsalinasduron/pelicamProject">Pelicam Project</a></li>
+                <p>
+                    This was a paid summer research project I did for a professor with a group of three others. We were tasked with
+                    coming up with a machine learning solution to automatically identifying pelicans in photos taken automatically 
+                    on Gunnison Island in the Great Salt Lake. The local pelican population was in environmental danger and by keeping 
+                    tabs on their average numbers this way the team in charge of finding a way to help them survive would be working in a more informed position.
+                </p> 
+                <p>
+                    All individuals in my group started off knowing nothing about artificial intelligence and machine learning and at the end of the six 
+                    week period we were able to solve the problem by creating our own machine learning solutions to both identifying pelican count 
+                    in the close up and long shot photos of them. We then presented our research individually to our peers at a research presentation event.
+                    This really gave me the opportunity to develop effective critical thinking, problem solving and communication skills while working on a project that 
+                    directly helped solve a challenge affecting my local community and fulfilling my global responsibility learning goal!
+                </p>
+            <li><a href="https://github.com/CalvinGolas/ScuffedPizza">Scuffed Pizza</a></li>
+            <p>
+                This was a pizza delivery website I built along with three other members of a team I led at a local hackathon. We used flask, twilio and a few other bells and whistles to 
+                create an easy to use website that could easily be adapted to work with any pizzeria that would want to partner with us. We didn't just build it, we built it in a twenty four hour time frame!
+            </p>
+            <li><a href="https://github.com/g-n/mitochondria">The Runner Game</a></li>
+            <p>
+                This was a semester long project I worked on with a team of other students. The goal? To build a video game to teach 
+                children math while learning agile software development methods. We designed, wrote, and tested our infinite math runner game
+                 according to the specifications of a hypothetical elementary school classroom of users. This gave us a wonderful chance to 
+                 understand the concepts and techniques of software design.
+            </p>
+            <li><a href="https://github.com/CalvinGolas/chatproj">Yeet Chat</a></li>
+                <p>
+                    After creating our own chat room internet protocol with our classmates, we were tasked with creating a server
+                     and a client program that would implement said protocal (the "yeet chat" protocol). In the end, I was able to create a server hosted 
+                     on a computer written in Java (linked in the above title) as well as a client iPhone app written in Swift. The iPhones are 
+                     able to connect to the server and chat away to their hearts' content using the Yeet Chat protocol.
+                </p>
+            <li><a href="https://github.com/CalvinGolas/Rasproject">Rasproject</a></li>
+                <p>
+                    This is a website built by myself and a team of three other classmates. It's hosted on a Raspberry Pi that 
+                    utilizes user input to run a local bash script. Depending on the url
+                    query, a different song will be played on an attached Arduino! 
+                </p>
+                <p>
+                    The website functions from a high level of html and network requests and then communicates to a bash script 
+                    that runs on the os. This then determines what is played on an arduino which the Raspberry Pi controls via Serial Communication, which required a lot of tinkering
+                    on the Pi's linux operating system. This really gave me an opportunity to attain a system level understanding of computers as well as an opportunity to collaborate with others on a larger project!
+                </p>
+            <li><a href="https://github.com/CalvinGolas/scarebear">The Scare Bear</a></li>
+                <p>
+                    One of the many lessons I’ve learnt over the past year staying inside has been that human interaction
+                     is a very important part of life to me and many others. Given the difficulties of gathering 
+                     I haven’t been able to spend time with my friends for a year and it’s really made me miss the 
+                     social aspect of sharing with others. Using computer science, programming and electronics, I wanted 
+                     to create something that could fill that void for the little while longer while we wait for everyone 
+                     to be vaccinated. I settled in the end on the idea of repurposing a cozy teddy bear into a storyteller 
+                     dedicated to sharing scary tales to anyone holding it, wherever they may need it.
+                </p>
+                <p>
+                    I spent the past school year working on my own project and decided to try making the above mentioned bear. 
+                    With the brains of a Raspberry Pi I was able to create a self updating scary story telling teddy bear that has 
+                    an incredibly accessible user experience and is, dare I say, capable of providing many spooks and scares to the people 
+                    who come across it. It was a wonderful exercise in creativity and one of the largest solo projects I've made 
+                    to date!
+                </p>
         </ul>
         </p>
         
